--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Setup Maven
         uses: stCarolas/setup-maven@v4.4
         with:
-          maven-version: 3.9.6
+          maven-version: 4.0.0
 
       - name: Build JAR
         run: mvn clean package
@@ -37,4 +37,4 @@ jobs:
           docker build -t my-webservice:${{ github.sha }} ./docker-context
 
       - name: Show image list
-        run: docker images | findstr webservice
+        run: docker images | findstr my-webservice
