--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,19 @@
-spring.application.name=webservice
-
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
-
+spring.datasource.url=jdbc:postgresql://dpg-d0plr1re5dus73dvmevg-a.oregon-postgres.render.com:5432/db_k10h
+spring.datasource.username=db_k10h_user
+spring.datasource.password=PVzFhQ1sKjI904InyuPoNbtTeugT4b27
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.cache.use_second_level_cache=false
-spring.jpa.properties.hibernate.cache.use_query_cache=false
-
-spring.freemarker.expose-request-attributes=true
-
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-
+spring.application.name=webservice
 spring.web.resources.chain.strategy.content.paths=/webjars/**,/public/**,/static/**
 
 spring.servlet.multipart.max-file-size=200MB
 spring.servlet.multipart.max-request-size=200MB
 
+spring.freemarker.expose-request-attributes=true
+
+spring.jpa.properties.hibernate.cache.use_second_level_cache=false
+spring.jpa.properties.hibernate.cache.use_query_cache=false
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
