--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://dpg-d0plr1re5dus73dvmevg-a.oregon-postgres.render.com:5432/db_k10h
-spring.datasource.username=db_k10h_user
-spring.datasource.password=PVzFhQ1sKjI904InyuPoNbtTeugT4b27
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
